# kube-compose

./: Dockerfile  README.md  pyproject.toml  version.sh
kube_compose/: __main__.py  utils.py
kube_compose/charts/kube-compose/: Chart.yaml
kube_compose/charts/kube-compose/templates/: deployment.yaml
kube_compose/cli/: __init__.py  config.py  cp.py  diff.py  down.py  drift.py  events.py  exec.py  history.py  init.py  kill.py  logs.py  ls.py  port-forward.py  ps.py  restart.py  rollback.py  run.py  scale.py  start.py  stats.py  status.py  stop.py  template.py  top.py  up.py  version.py
kube_compose/cli/configmap/: __init__.py  create.py  inspect.py  ls.py  rm.py  template.py
kube_compose/cli/get/: __init__.py  all.py  manifest.py  metadata.py  values.py
kube_compose/cli/volume/: __init__.py  create.py  inspect.py  ls.py  rm.py  template.py
tests/units/simple/: docker-compose.yaml
